@@ -724,7 +724,7 @@ Numeric tag %s contains characters other than digits and '.'", name);
 	else
 	{
 	    if (save_cwd (&cwd))
-		exit (1);
+		exit (EXIT_FAILURE);
 	    if (chdir (repository) < 0)
 		error (1, errno, "cannot change to %s directory", repository);
 	}
@@ -737,7 +737,7 @@ Numeric tag %s contains characters other than digits and '.'", name);
     if (repository != NULL && repository[0] != '\0')
     {
 	if (restore_cwd (&cwd, NULL))
-	    exit (1);
+	    exit (EXIT_FAILURE);
 	free_cwd (&cwd);
     }
 
