@@ -1,5 +1,14 @@
 Fri Mar 22 10:09:55 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
+	* error.c: Exit with status EXIT_FAILURE rather than STATUS.  We
+	had been neglecting to check for 256, and the value of providing a
+	count of errors is probably minimal anyway.
+	* add.c, modules.c, mkmodules.c, tag.c, server.c, main.c,
+	import.c, client.c, scramble.c, recurse.c: Exit with status
+	EXIT_FAILURE rather than 1.  On VMS, 1 is success, not failure.
+	* main.c (main): Return EXIT_FAILURE or 0.  The value of providing
+	a count of errors is minimal.
+
 	* client.c (init_sockaddr): Exit with status 1 rather than
 	EXIT_FAILURE.  The latter apparently doesn't exist on SunOS4.
 	Reindent function.
